--- a/sass/_shame.scss
+++ b/sass/_shame.scss
@@ -1,68 +1,6 @@
-/* Carousel*/
-#carousel{
-    height:100vH;
-    overflow: hidden;
-}
-.item{
-    border:2px dotted $primary-color;
-    margin:$vgrid 0;
-    aside {
-        img {
-            max-width: 100%;
-            height:auto;
-        }
-    }
-}
-/**** Portfolio ****/
-#portfolio {
-    margin: 0 -1em;
-}
-.portfolio{
-    position:relative;
-    margin:1em;
-    width:235px;
-    height:235px;
-    overflow:hidden;
+.leftalign{
     float:left;
-    display:inline-block;
-    > [class*="portfolio_"]{
-        position:absolute;
-        top:0;
-        left:0;
-        background: #000;
-    }
-    > .portfolio_content{
-        * {font-size: small;}
-        overflow: hidden;
-        left:-100%;
-        padding:2em;
-        width:235px;
-        height:235px;
-        z-index: 99;
-        *{color:white !important;}
-    }
-        &:hover{
-        overflow:visible;
-        > .portfolio_thumbnail{
-            padding:5px;
-
-        }
-        > .portfolio_content{
-            left:calc(100%);
-            width:calc(100% + 2em);
-        }
-        
-    }
-    &:nth-child(4n){
-        > .portfolio_content{
-            right:-100%;
-            left:auto;
-        }
-        &:hover{
-            > .portfolio_content{
-                right:calc(100%);  
-                left:auto;
-            }
-        }
-    }
+}
+.rightalign{
+    float:right;
 }
