--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,5 +5,12 @@ $vgrid:     20px;
 $base-bg_color:#eee;
 $text-color:#232020;
 $base-color-grey:#A6ABAE;
+$dark-color-grey:#52595F;
 $base-color-white:#fff;
-$primary-color:#6D3332
+$primary-color:#6D3332;
+$primary-color-darker:#623636;
+
+
+//Grids, Margins and paddings
+
+$vgrid:32px;
