--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -3,8 +3,13 @@
 @import "/Users/chilliscope/Documents/Webseiten/toolbox/sass/myMixins/mixins";
 @import "/Users/chilliscope/Documents/Webseiten/toolbox/sass/myMixins/breakpoints";
 
-@import "uitils/_variables";
-@import "uitils/_icons";
+@import "utils/_variables";
+@import "utils/_icons";
+@import "base/_grid";
+@import "base/_typography";
+@import "base/_globals";
+@import "content/_layout";
+@import "content/_navigation";
 @import "content/_content";
 @import "content/_media";
-@import "_shame";
+@import "_shame.scss";
