--- a/sass/content/_layout.scss
+++ b/sass/content/_layout.scss
@@ -10,4 +10,16 @@ body.home{
         float: right;
     }
 }
+[class*="col-"]{
+    .item & {
+        padding:0 !important;
+    }
+}
 
+/**** Footer ****/
+body > footer{
+    background: $primary-color;
+    * {
+        color:white;
+    }
+}
