--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -1,10 +1,30 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 02.03.2016, 15:34:27
-    Author     : chilliscope
-*/
+/*$fg-column: 60px;             // Column Width
+$fg-gutter: 25px;             // Gutter Width
+$fg-max-columns: 12;          // Total Columns For Main Container
 
+div {
+  width: flex-grid(4);        // returns (315px / 1020px) = 30.882353%;
+  margin-left: flex-gutter(); // returns (25px / 1020px) = 2.45098%;
+
+  p {
+    width: flex-grid(2, 4);   // returns (145px / 315px) = 46.031746%;
+    float: left;
+    margin: flex-gutter(4);   // returns (25px / 315px) = 7.936508%;
+  }
+
+  blockquote {
+    float: left;
+    width: flex-grid(2, 4);   // returns (145px / 315px) = 46.031746%;
+  }
+}*/
+
+///Flexbox
+.row{
+    @include align-items(flex-start);
+    @include display(flex);
+    @include flex-direction(row);
+    @include justify-content(space-between);
+    > div {
+        @include flex(1);
+    }
+}
