--- a/sass/content/_media.scss
+++ b/sass/content/_media.scss
@@ -1,15 +1,64 @@
 /* Carousel*/
+/*svg {
+    .colGrey{
+        fill:#A6ABAE;
+    }
+    .colWhite{
+        fill:#ffffff;
+    }
+    
+}*/
 #carousel{
-    height:100vH;
+    height:567px;
     overflow: hidden;
 }
 .item{
-    border:2px dotted $primary-color;
     margin:$vgrid 0;
     aside {
         img {
             max-width: 100%;
             height:auto;
+            float:right;
+        }
+    }
+}
+.carousel-control{
+    height:100%;
+    width:50px;
+    background-color: transparent !important;
+    background-image: none !important;
+    opacity:0;
+    @include display(flex);
+    @include flex-direction(column);
+    @include justify-content(center);
+    > .handle{
+        @include circle(50px);
+        background: rgba(255,255,255,.75);
+        @include transform-origin(center center);
+        display:block;
+        svg {
+            width:40%;
+            margin:30%;
+            height:40%;
+        }
+        span {
+            display:inline-block;
+            text-indent: -999999999px;
+            overflow:hidden;
+        }
+    }
+    &.left {
+        left:calc(50% + 4em);
+        .handle{
+            @include transform(scale(1) rotate(90deg));
+            float:left;
+        }
+    }
+    &.right {
+        right:1em;
+        .handle{
+            @include transform(scale(1) rotate(-90deg)); 
+            float:right;
         }
     }
 }
@@ -41,7 +90,7 @@
         z-index: 99;
         *{color:white !important;}
     }
-        &:hover{
+    &:hover{
         overflow:visible;
         > .portfolio_thumbnail{
             padding:5px;
@@ -51,7 +100,7 @@
             left:calc(100%);
             width:calc(100% + 2em);
         }
-        
+
     }
     &:nth-child(4n){
         > .portfolio_content{
@@ -64,5 +113,20 @@
                 left:auto;
             }
         }
+    }
+}
+//Iframe Elastic
+.iframe-elastic {
+    position: relative;
+    padding-bottom: 55%; /* ratio width/height in % Bsp. (450 ÷ 500 = 0.9 = 90%) */
+    padding-top: 15px;
+    height: 0;
+    overflow: hidden;
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
     }
 }
