--- a/sass/utils/_icons.scss
+++ b/sass/utils/_icons.scss
@@ -8,12 +8,17 @@
     fill:$base-color-white;
 }
 
-/*.colDarkRed{
+.colDarkRed{
     fill:$primary-color-darker;
 }
 .colDarkgrey{
     fill:$dark-color-grey;
-}*/
-#logo > *{
-    fill:red !important;
+}
+#logo svg .st0{
+    fill:red;
+}
+.dots {
+    #pfeil-xs &{
+        fill:$primary-color;
+    }
 }
