--- a/css/screen.css
+++ b/css/screen.css
@@ -1,4 +1,16 @@
+@charset "UTF-8";
 /*** BSP: @extend %reset;***/
+#header nav ul:before, #header nav ul:after {
+  content: "";
+  display: table; }
+#header nav ul:after {
+  clear: both; }
+
+#header nav ul {
+  margin: 0 !important;
+  padding: 0 !important;
+  border: 0 !important; }
+
 /*** Mixins & Placeholders ***/
 /**** caret ****/
 /* Bsp. @include alpha-background-color(rgba(black, 0.35), white); */
@@ -50,16 +62,319 @@ div {
     width: flex-grid(2, 4);   // returns (145px / 315px) = 46.031746%;
   }
 }*/
-.row {
-  -webkit-box-align: start;
-  -moz-box-align: start;
-  box-align: start;
-  -webkit-align-items: flex-start;
-  -moz-align-items: flex-start;
-  -ms-align-items: flex-start;
-  -o-align-items: flex-start;
-  align-items: flex-start;
-  -ms-flex-align: start;
+html,
+body {
+  font-size: 100%;
+  /*prevents ios safari from zooming on orientation change (maybe)*/
+  -webkit-text-size-adjust: none; }
+
+body {
+  color: #000;
+  font-family: "Source Sans Pro", Arial, sans-serif; }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0 0 1rem;
+  font-family: "Source Sans Pro", Arial, sans-serif;
+  line-height: 1.1;
+  font-weight: 400;
+  color: #52595F; }
+  body.home h1, body.home
+  h2, body.home
+  h3, body.home
+  h4, body.home
+  h5, body.home
+  h6 {
+    color: white !important; }
+  h1.logo span,
+  h2.logo span,
+  h3.logo span,
+  h4.logo span,
+  h5.logo span,
+  h6.logo span {
+    margin: 0;
+    font-weight: 300;
+    font-size: 14px; }
+  article h1, .page h1, article
+  h2, .page
+  h2, article
+  h3, .page
+  h3, article
+  h4, .page
+  h4, article
+  h5, .page
+  h5, article
+  h6, .page
+  h6 {
+    font-size: 50px;
+    text-transform: uppercase;
+    line-height: 1;
+    letter-spacing: -.025em;
+    font-weight: 900; }
+    article h1 > span, .page h1 > span, article
+    h2 > span, .page
+    h2 > span, article
+    h3 > span, .page
+    h3 > span, article
+    h4 > span, .page
+    h4 > span, article
+    h5 > span, .page
+    h5 > span, article
+    h6 > span, .page
+    h6 > span {
+      color: #6D3332; }
+  .contact h1, .contact
+  h2, .contact
+  h3, .contact
+  h4, .contact
+  h5, .contact
+  h6 {
+    text-align: center; }
+  .portfolio_content h1, .portfolio_content
+  h2, .portfolio_content
+  h3, .portfolio_content
+  h4, .portfolio_content
+  h5, .portfolio_content
+  h6 {
+    font-size: 1.25em;
+    margin: 0; }
+  body.leistungen article h1, body.leistungen article
+  h2, body.leistungen article
+  h3, body.leistungen article
+  h4, body.leistungen article
+  h5, body.leistungen article
+  h6 {
+    font-size: 1.2em;
+    color: #6D3332; }
+
+p {
+  margin: 0 0 1rem;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 150%; }
+  p.lead, blockquote p {
+    font-size: 1.125rem;
+    line-height: 1.33; }
+  body.home > footer p {
+    font-family: "Source Sans Pro", Arial, sans-serif;
+    font-size: 1.6em;
+    text-transform: uppercase;
+    font-weight: bold !important;
+    line-height: 1;
+    margin-bottom: 0; }
+  body.leistungen > main p {
+    text-align: center; }
+
+a {
+  color: #6D3332; }
+  .logo a {
+    color: #52595F; }
+    body.home .logo a {
+      color: #fff; }
+
+ul,
+ol {
+  padding-left: 1.5rem; }
+  ul li,
+  ol li {
+    line-height: 150%; }
+  ul.unstyled,
+  ol.unstyled {
+    padding: 0;
+    list-style: none; }
+  ul.inline,
+  ol.inline {
+    margin: 0 1rem 1rem -1rem;
+    padding: 0;
+    list-style: none;
+    overflow: hidden; }
+    ul.inline > li,
+    ol.inline > li {
+      display: block;
+      float: left;
+      margin-left: 1rem;
+      list-style: none; }
+
+dl {
+  margin: 0 0 1rem;
+  line-height: 150%; }
+
+dt {
+  font-weight: bold; }
+
+dd {
+  margin: 0 0 0.5rem; }
+
+blockquote {
+  position: relative;
+  margin: 1.5rem 1rem 1.5rem 3rem; }
+  blockquote:before {
+    content: "“";
+    display: block;
+    position: absolute;
+    top: -1rem;
+    left: -3rem;
+    color: #404040;
+    font-size: 5rem;
+    line-height: 1; }
+
+.text-left {
+  text-align: left; }
+
+.text-center {
+  text-align: center; }
+
+.text-right {
+  text-align: right; }
+
+.text-muted {
+  color: #404040; }
+
+.text-smaller {
+  font-size: smaller; }
+
+/*** tables ****/
+table {
+  width: 100%;
+  margin-bottom: 2em; }
+
+.leftalign {
+  float: left; }
+
+.rightalign {
+  float: right; }
+
+html {
+  position: relative;
+  min-height: 100%; }
+
+body {
+  margin-bottom: 40px; }
+  body.home {
+    /*        height:100vH;*/
+    background-color: rgba(0, 0, 0, 0.5);
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-bottom: 87px; }
+    body.home > footer {
+      height: 87px; }
+  body > footer {
+    height: 40px;
+    width: 100vW;
+    position: absolute;
+    bottom: 0; }
+
+#header .container, .container#portfolio {
+  padding: 0; }
+
+#header {
+  padding-top: 32px; }
+  #header .logo {
+    position: relative; }
+    #header .logo span.name {
+      display: none; }
+    #header .logo span.description {
+      position: absolute;
+      right: 125px;
+      bottom: 35px;
+      letter-spacing: .01em; }
+
+body.leistungen > main {
+  background: #eee;
+  padding-top: 6em; }
+
+/**** Footer ****/
+body > footer * {
+  color: white; }
+
+body:not(.home) > footer {
+  background: #6D3332; }
+
+#header nav {
+  text-transform: uppercase;
+  font-size: 1.125rem; }
+  #header nav ul {
+    list-style: none; }
+    #header nav ul li {
+      float: left;
+      display: inline-block;
+      width: 20%; }
+  #header nav li.menu-item a {
+    display: block;
+    padding-top: 2rem;
+    text-align: center;
+    color: #52595F;
+    font-weight: bold;
+    border-top: 2px solid transparent; }
+    #header nav li.menu-item a:hover {
+      text-decoration: none;
+      color: #6D3332;
+      border-color: currentColor; }
+    body.home #header nav li.menu-item a, body.home #header nav li.menu-item a:hover {
+      color: white; }
+  #header nav li.menu-item.current-menu-item a {
+    color: #6D3332;
+    border-top: 2px solid #6D3332; }
+
+body.home article h1 {
+  margin: 0 5em; }
+body.leistungen article {
+  text-align: center; }
+  body.leistungen article .thumbnail {
+    background: transparent;
+    border: 0; }
+    body.leistungen article .thumbnail img {
+      width: auto;
+      height: 75px;
+      max-width: none; }
+  body.leistungen article:nth-child(even) {
+    padding-left: 3em; }
+  body.leistungen article:nth-child(odd) {
+    padding-right: 3em; }
+  body.leistungen article:last-child {
+    float: none;
+    clear: both;
+    width: 100%;
+    padding: 0; }
+
+.contact-map .iframe-elastic iframe {
+  pointer-events: none; }
+
+.contact-buttons {
+  text-align: center; }
+  .contact-buttons .row > div {
+    border: 1px dotted #eee; }
+  .contact-buttons .icon {
+    max-width: 128px;
+    max-height: 128px; }
+
+#carousel {
+  height: 567px;
+  overflow: hidden; }
+
+.carousel-inner {
+  margin-left: 2em; }
+
+.item {
+  margin: 32px 0; }
+  .item aside img {
+    width: 100%;
+    height: auto;
+    float: right; }
+
+.carousel-control {
+  height: 100%;
+  width: 50px;
+  background-color: transparent !important;
+  background-image: none !important;
+  opacity: 0;
+  position: absolute;
   display: -webkit-box;
   display: -moz-box;
   display: box;
@@ -67,40 +382,134 @@ div {
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -moz-box-orient: horizontal;
-  box-orient: horizontal;
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  box-orient: vertical;
   -webkit-box-direction: normal;
   -moz-box-direction: normal;
   box-direction: normal;
-  -webkit-flex-direction: row;
-  -moz-flex-direction: row;
-  flex-direction: row;
-  -ms-flex-direction: row;
-  -webkit-box-pack: justify;
-  -moz-box-pack: justify;
-  box-pack: justify;
-  -webkit-justify-content: space-between;
-  -moz-justify-content: space-between;
-  -ms-justify-content: space-between;
-  -o-justify-content: space-between;
-  justify-content: space-between;
-  -ms-flex-pack: justify; }
-  .row > div {
-    -webkit-box-flex: 1;
-    -moz-box-flex: 1;
-    box-flex: 1;
-    -webkit-flex: 1;
-    -moz-flex: 1;
-    -ms-flex: 1;
-    flex: 1; }
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-direction: column;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  box-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  -o-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center; }
+  .carousel-control > .handle {
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    -webkit-border-radius: 25px;
+    border-radius: 25px;
+    background: rgba(255, 255, 255, 0.75);
+    -webkit-transform-origin: center center;
+    -moz-transform-origin: center center;
+    -ms-transform-origin: center center;
+    -o-transform-origin: center center;
+    transform-origin: center center;
+    display: block; }
+    .carousel-control > .handle svg {
+      width: 40%;
+      margin: 30%;
+      height: 40%; }
+    .carousel-control > .handle span {
+      display: inline-block;
+      text-indent: -999999999px;
+      overflow: hidden; }
+  .carousel-control.left {
+    left: 2em; }
+    .carousel-control.left .handle {
+      -webkit-transform: scale(1) rotate(90deg);
+      -moz-transform: scale(1) rotate(90deg);
+      -ms-transform: scale(1) rotate(90deg);
+      -o-transform: scale(1) rotate(90deg);
+      transform: scale(1) rotate(90deg);
+      float: left; }
+  body[class*="-subpages"] .carousel-control.left {
+    left: calc(50% + 2.8em); }
+  .carousel-control.right {
+    right: 0.4em; }
+    .carousel-control.right .handle {
+      -webkit-transform: scale(1) rotate(-90deg);
+      -moz-transform: scale(1) rotate(-90deg);
+      -ms-transform: scale(1) rotate(-90deg);
+      -o-transform: scale(1) rotate(-90deg);
+      transform: scale(1) rotate(-90deg);
+      float: right; }
 
-/*@import "base/_typography";
-@import "base/_globals";
-@import "content/_layout";
-@import "content/_navigation";
-@import "content/_content";
-@import "content/_media";
-@import "_shame.scss";*/
+/**** Portfolio ****/
+.portfolio-item {
+  position: relative;
+  margin: 1em;
+  width: 235px;
+  height: 235px;
+  overflow: hidden;
+  float: left;
+  display: inline-block; }
+  .portfolio-item > [class*="portfolio_"] {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #000; }
+  .portfolio-item > .portfolio_content {
+    overflow: hidden;
+    left: -100%;
+    padding: 2em;
+    width: 235px;
+    height: 235px;
+    z-index: 99;
+    text-align: center;
+    /*        .portfolio_title a:hover{
+                text-decoration: none;
+                opacity: .5;
+            }*/ }
+    .portfolio-item > .portfolio_content * {
+      color: white !important; }
+    .portfolio-item > .portfolio_content svg {
+      height: 3px;
+      width: 100%;
+      margin: 1em 0; }
+    .portfolio-item > .portfolio_content p {
+      font-size: 1em;
+      line-height: 1.2; }
+    .portfolio-item > .portfolio_content .view-article {
+      display: none; }
+  .portfolio-item:hover {
+    overflow: visible; }
+    .portfolio-item:hover > .portfolio_thumbnail {
+      padding: 5px; }
+    .portfolio-item:hover > .portfolio_content {
+      left: calc(100%);
+      width: calc(100% + 2em); }
+  .portfolio-item:nth-child(4n) > .portfolio_content {
+    right: -100%;
+    left: auto; }
+  .portfolio-item:nth-child(4n):hover > .portfolio_content {
+    right: calc(100%);
+    left: auto; }
+
+.iframe-elastic {
+  position: relative;
+  padding-bottom: 55%;
+  /* ratio width/height in % Bsp. (450 ÷ 500 = 0.9 = 90%) */
+  padding-top: 15px;
+  height: 0;
+  overflow: hidden; }
+  .iframe-elastic iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+
+/** {
+    border:1px dashed red;
+}*/
 
 /*# sourceMappingURL=screen.css.map */
