--- a/sass/content/_media.scss
+++ b/sass/content/_media.scss
@@ -1,22 +1,15 @@
-/* Carousel*/
-/*svg {
-    .colGrey{
-        fill:#A6ABAE;
-    }
-    .colWhite{
-        fill:#ffffff;
-    }
-    
-}*/
 #carousel{
     height:567px;
     overflow: hidden;
+}
+.carousel-inner{
+    margin-left: 2em;
 }
 .item{
     margin:$vgrid 0;
     aside {
         img {
-            max-width: 100%;
+            width: 100%;
             height:auto;
             float:right;
         }
@@ -28,6 +21,7 @@
     background-color: transparent !important;
     background-image: none !important;
     opacity:0;
+    position: absolute;
     @include display(flex);
     @include flex-direction(column);
     @include justify-content(center);
@@ -48,25 +42,27 @@
         }
     }
     &.left {
-        left:calc(50% + 4em);
+        left:2em;
         .handle{
             @include transform(scale(1) rotate(90deg));
             float:left;
         }
     }
+    body[class*="-subpages"] &.left{
+        left:calc(50% + 2.8em);
+    }
     &.right {
-        right:1em;
+        right:0.4em;
         .handle{
             @include transform(scale(1) rotate(-90deg)); 
             float:right;
         }
     }
+
 }
+
 /**** Portfolio ****/
-#portfolio {
-    margin: 0 -1em;
-}
-.portfolio{
+.portfolio-item{
     position:relative;
     margin:1em;
     width:235px;
@@ -81,14 +77,28 @@
         background: #000;
     }
     > .portfolio_content{
-        * {font-size: small;}
         overflow: hidden;
         left:-100%;
         padding:2em;
         width:235px;
         height:235px;
         z-index: 99;
+        text-align: center;
         *{color:white !important;}
+        svg {
+            height: 3px;
+            width: 100%;
+            margin: 1em 0;
+        }
+        p {
+            font-size: 1em;
+    line-height: 1.2;
+        }
+        .view-article{display: none;}
+/*        .portfolio_title a:hover{
+            text-decoration: none;
+            opacity: .5;
+        }*/
     }
     &:hover{
         overflow:visible;
