--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -4,12 +4,13 @@
 @import "/Users/chilliscope/Documents/Webseiten/toolbox/sass/myMixins/breakpoints";
 
 @import "utils/_variables";
+@import "utils/_mixins";
 @import "utils/_icons";
 @import "base/_grid";
-/*@import "base/_typography";
+@import "base/_typography";
 @import "base/_globals";
 @import "content/_layout";
 @import "content/_navigation";
 @import "content/_content";
 @import "content/_media";
-@import "_shame.scss";*/
+@import "_shame.scss";
